Fixed Mobile View spacings for Header, Profile, Cards and Footer

--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -10,3 +10,9 @@
   padding: 0px;
   margin: 0px;
 }
+
+@media screen and (max-width: 440px) {
+  .cards {
+    margin-top: 36px;
+  }
+}
