--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -22,3 +22,9 @@
     line-height: 17px;
   }
 }
+
+@media screen and (max-width: 480px) {
+  .footer__copyright {
+    margin: 48px 0 36px 0;
+  }
+}
