--- a/blocks/header.css
+++ b/blocks/header.css
@@ -12,7 +12,11 @@
 
 @media screen and (max-width: 480px) {
   .header {
+    max-width: 100vw;
     padding-top: 0;
+    padding-bottom: 32px;
     margin-top: 28px;
+    margin-left: 0;
+    margin-right: 0;
   }
 }
