--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -96,6 +96,7 @@
     width: 100%;
     justify-content: center;
     margin-top: 30px;
+    margin-right: 0;
   }
   .profile__edit-button {
     width: 18px;
